--- a/app/src/main/res/layout/activity_custom_rom.xml
+++ b/app/src/main/res/layout/activity_custom_rom.xml
@@ -154,6 +154,14 @@
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:text="@string/add" />
+
+                <TextView
+                    android:id="@+id/textview1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/adddrivenote"
+                    android:textSize="12sp" />
             </LinearLayout>
         </ScrollView>
 
