--- a/app/src/main/res/menu/home_toolbar_menu_old.xml
+++ b/app/src/main/res/menu/home_toolbar_menu_old.xml
@@ -7,4 +7,10 @@
 		app:showAsAction="always"
 		android:title="@string/info"/>
 
+	<item
+		android:id="@+id/arch"
+		android:icon="@drawable/ic_arch"
+		app:showAsAction="always"
+		android:title="@string/title_activity_set_arch"/>
+
 </menu>
