--- a/app/src/main/res/layout/activity_set_arch.xml
+++ b/app/src/main/res/layout/activity_set_arch.xml
@@ -100,4 +100,27 @@
             android:textAlignment="textStart"
             app:icon="@drawable/round_public_24" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:text="@string/suggested_use_of_create_command" />
+
+        <Button
+            android:id="@+id/buttongetcm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="@string/getit" />
+    </LinearLayout>
 </LinearLayout>
