--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -61,9 +61,10 @@
                             android:textSize="12sp" />
 
                         <TextView
+                            android:id="@+id/versionname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/app_version"
+                            android:text=""
                             android:textSize="12sp" />
                     </LinearLayout>
 
