--- a/app/src/main/res/layout/activity_set_arch.xml
+++ b/app/src/main/res/layout/activity_set_arch.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:id="@+id/appbar"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
+        android:layout_margin="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,7 +58,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/choose_qemu_architecture"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:layout_margin="8dp"
+            android:gravity="center" />
 
         <Button
             android:id="@+id/archi386"
