--- a/app/src/main/res/layout/activity_setup_qemu.xml
+++ b/app/src/main/res/layout/activity_setup_qemu.xml
@@ -7,6 +7,60 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
     <LinearLayout
+        android:id="@+id/linearload"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:indeterminate="false"
+            style="?android:progressBarStyle" />
+        <TextView
+            android:id="@+id/textviewconnecting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:gravity="center"
+            android:text="Just a moment..." />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearcannotconnecttoserver"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cloud_off_96px" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/oops"
+            android:layout_margin="8dp"
+            android:textSize="18sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Unable to connect to server"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttontryconnectagain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Try again" />
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/linearsimplesetupui"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:text="Do you want to set it up automatically or select the boot strap file manually\?" />
+                    android:text="Do you want to set it up automatically or select the bootstrap file manually\?" />
                 <LinearLayout
                     android:id="@+id/linear5"
                     android:layout_width="match_parent"
