--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/round_shop_24"
         android:title="@string/store" />
     <item
+        android:id="@+id/navigation_item_get_rom"
+        android:icon="@drawable/hard_disk_24px"
+        android:title="@string/store" />
+    <item
         android:id="@+id/navigation_item_website"
         android:icon="@drawable/round_public_24"
         android:title="@string/vectras_website" />
