--- a/app/src/main/res/layout/activity_roms_manager.xml
+++ b/app/src/main/res/layout/activity_roms_manager.xml
@@ -94,7 +94,8 @@
             android:padding="8dp"
             app:cardCornerRadius="10dp"
             app:cardUseCompatPadding="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:visibility="gone" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -122,7 +123,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Kernel"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:visibility="gone" />
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -194,7 +196,7 @@
             android:id="@+id/goBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/importRom"
+            android:text="Continue"
             app:backgroundTint="@drawable/btn_state" />
     </LinearLayout>
 
