--- a/app/src/main/res/layout/activity_roms_manager.xml
+++ b/app/src/main/res/layout/activity_roms_manager.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:gravity="center"
-            android:text="Just a moment..." />
+            android:text="@string/just_a_moment" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearnothinghere"
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Unable to connect to server"
+            android:text="@string/unable_to_connect_to_server"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp" />
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Try again" />
+            android:text="@string/try_again" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
