--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="bottom|center_vertical"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layout_marginTop="20dp"
     android:padding="12dp">
@@ -15,13 +15,28 @@
         android:scaleType="centerInside"
         app:srcCompat="@drawable/gbp" />
 
-    <TextView
-        android:id="@+id/appNameTxt"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:singleLine="true"
-        android:text="@string/app_name"
-        android:textSize="20sp" />
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+        <TextView
+            android:id="@+id/appNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:singleLine="true"
+            android:text="@string/app_name"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/appVersionName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:paddingLeft="8dp"
+            android:text="@string/app_version"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 
 </LinearLayout>
